# cmake_study

example/: main.cpp
solve/: CMakeLists.txt  how_to_build.txt  main.cpp
solve/json/json1/: CMakeLists.txt  json.cpp
solve/json/json2/: json.cpp  json.h
